src/main/java/ru/icc/td/tabbyxl/crl2j/parsing/crl_gramParser.java
// $ANTLR 3.4 src/main/resources/crl_gram.g 2018-07-02 22:47:14
package ru.icc.td.tabbyxl.crl2j.parsing;
import org.antlr.runtime.*;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class crl_gramParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADV_IDENT", "ADV_IDENT1", "ADV_IDENT2", "Action", "Actions", "AddLabelAction", "Assignment", "Breackits", "CATEGORY", "Char_lit", "Condition", "Conditions", "Constraint", "DIGIT", "EOL", "GroupAction", "IDENT", "IDENT1", "IDENT2", "INT", "Identifier", "Import_item", "Imports", "J_expr", "J_int_literal", "LABEL", "LETTER", "MergeAction", "NewEntryAction", "NewLabelAction", "No_condition", "Other_literals", "Package", "PrintAction", "RULES", "STRING", "SetCategoryAction", "SetIndentAction", "SetMarkAction", "SetParentAction", "SetTextAction", "SetValueAction", "SplitAction", "String_lit", "UpdateAction", "WS", "'\"'", "'*'", "','", "'.'", "':'", "';'", "'['", "']'", "'add label'", "'as'", "'category'", "'cell'", "'end'", "'entry'", "'group'", "'import'", "'label'", "'lock-on-active'", "'merge'", "'new entry'", "'new label'", "'no categories'", "'no cells'", "'no entries'", "'no labels'", "'no-loop false'", "'no-loop true'", "'of'", "'package'", "'print'", "'printf'", "'rule #'", "'set category'", "'set indent'", "'set mark'", "'set parent'", "'set text'", "'set value'", "'split'", "'then'", "'to'", "'update'", "'when'", "'with'"
    };

    public static final int EOF=-1;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int ADV_IDENT=4;
    public static final int ADV_IDENT1=5;
    public static final int ADV_IDENT2=6;
    public static final int Action=7;
    public static final int Actions=8;
    public static final int AddLabelAction=9;
    public static final int Assignment=10;
    public static final int Breackits=11;
    public static final int CATEGORY=12;
    public static final int Char_lit=13;
    public static final int Condition=14;
    public static final int Conditions=15;
    public static final int Constraint=16;
    public static final int DIGIT=17;
    public static final int EOL=18;
    public static final int GroupAction=19;
    public static final int IDENT=20;
    public static final int IDENT1=21;
    public static final int IDENT2=22;
    public static final int INT=23;
    public static final int Identifier=24;
    public static final int Import_item=25;
    public static final int Imports=26;
    public static final int J_expr=27;
    public static final int J_int_literal=28;
    public static final int LABEL=29;
    public static final int LETTER=30;
    public static final int MergeAction=31;
    public static final int NewEntryAction=32;
    public static final int NewLabelAction=33;
    public static final int No_condition=34;
    public static final int Other_literals=35;
    public static final int Package=36;
    public static final int PrintAction=37;
    public static final int RULES=38;
    public static final int STRING=39;
    public static final int SetCategoryAction=40;
    public static final int SetIndentAction=41;
    public static final int SetMarkAction=42;
    public static final int SetParentAction=43;
    public static final int SetTextAction=44;
    public static final int SetValueAction=45;
    public static final int SplitAction=46;
    public static final int String_lit=47;
    public static final int UpdateAction=48;
    public static final int WS=49;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public crl_gramParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public crl_gramParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return crl_gramParser.tokenNames; }
    public String getGrammarFileName() { return "src/main/resources/crl_gram.g"; }


    public static class crl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public CommonTree getTree() { return tree; }
    };


    // $ANTLR start "crl"
    // src/main/resources/crl_gram.g:62:1: crl : ( package_stmt )? ( import_stmt )* ( crl_rule )+ -> ^( Imports ( import_stmt )* ) ^( RULES ( crl_rule )+ ) ;
    public final crl_gramParser.crl_return crl() throws RecognitionException {
        crl_gramParser.crl_return retval = new crl_gramParser.crl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        crl_gramParser.package_stmt_return package_stmt1 =null;

        crl_gramParser.import_stmt_return import_stmt2 =null;

        crl_gramParser.crl_rule_return crl_rule3 =null;


        RewriteRuleSubtreeStream stream_crl_rule=new RewriteRuleSubtreeStream(adaptor,"rule crl_rule");
        RewriteRuleSubtreeStream stream_import_stmt=new RewriteRuleSubtreeStream(adaptor,"rule import_stmt");
        RewriteRuleSubtreeStream stream_package_stmt=new RewriteRuleSubtreeStream(adaptor,"rule package_stmt");
        try {
            // src/main/resources/crl_gram.g:63:2: ( ( package_stmt )? ( import_stmt )* ( crl_rule )+ -> ^( Imports ( import_stmt )* ) ^( RULES ( crl_rule )+ ) )
            // src/main/resources/crl_gram.g:63:4: ( package_stmt )? ( import_stmt )* ( crl_rule )+
            {
            // src/main/resources/crl_gram.g:63:4: ( package_stmt )?
            int alt1=2;
            alt1 = dfa1.predict(input);
            switch (alt1) {
                case 1 :
                    // src/main/resources/crl_gram.g:63:4: package_stmt
                    {
                    pushFollow(FOLLOW_package_stmt_in_crl201);
                    package_stmt1=package_stmt();

                    state._fsp--;

                    stream_package_stmt.add(package_stmt1.getTree());

                    }
                    break;

            }


            // src/main/resources/crl_gram.g:63:18: ( import_stmt )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==65||LA2_0==78) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/main/resources/crl_gram.g:63:18: import_stmt
            	    {
            	    pushFollow(FOLLOW_import_stmt_in_crl204);
            	    import_stmt2=import_stmt();

            	    state._fsp--;

            	    stream_import_stmt.add(import_stmt2.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // src/main/resources/crl_gram.g:63:31: ( crl_rule )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==81) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/main/resources/crl_gram.g:63:31: crl_rule
            	    {
            	    pushFollow(FOLLOW_crl_rule_in_crl207);
            	    crl_rule3=crl_rule();

            	    state._fsp--;

            	    stream_crl_rule.add(crl_rule3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            // AST REWRITE
            // elements: import_stmt, crl_rule
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 63:41: -> ^( Imports ( import_stmt )* ) ^( RULES ( crl_rule )+ )
            {
                // src/main/resources/crl_gram.g:63:44: ^( Imports ( import_stmt )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(Imports, "Imports")
                , root_1);

                // src/main/resources/crl_gram.g:63:54: ( import_stmt )*
                while ( stream_import_stmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_import_stmt.nextTree());

                }
                stream_import_stmt.reset();

                adaptor.addChild(root_0, root_1);
                }

                // src/main/resources/crl_gram.g:63:68: ^( RULES ( crl_rule )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(RULES, "RULES")
                , root_1);

                if ( !(stream_crl_rule.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_crl_rule.hasNext() ) {
                    adaptor.addChild(root_1, stream_crl_rule.nextTree());

                }
                stream_crl_rule.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "crl"


    public static class package_stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "package_stmt"
    // src/main/resources/crl_gram.g:66:1: package_stmt : 'package' import_item ;
    public final crl_gramParser.package_stmt_return package_stmt() throws RecognitionException {
        crl_gramParser.package_stmt_return retval = new crl_gramParser.package_stmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CommonToken string_literal4=null;
        crl_gramParser.import_item_return import_item5 =null;


        CommonTree string_literal4_tree=null;

        try {
            // src/main/resources/crl_gram.g:67:2: ( 'package' import_item )
            // src/main/resources/crl_gram.g:67:4: 'package' import_item
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal4=(CommonToken)match(input,78,FOLLOW_78_in_package_stmt236); 
            string_literal4_tree = 
            (CommonTree)adaptor.create(string_literal4)
            ;
            adaptor.addChild(root_0, string_literal4_tree);


            pushFollow(FOLLOW_import_item_in_package_stmt238);
            import_item5=import_item();

            state._fsp--;

            adaptor.addChild(root_0, import_item5.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "package_stmt"


    public static class import_stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "import_stmt"
    // src/main/resources/crl_gram.g:71:1: import_stmt : i= import_unit -> Import_item[$i.value] ;
    public final crl_gramParser.import_stmt_return import_stmt() throws RecognitionException {
        crl_gramParser.import_stmt_return retval = new crl_gramParser.import_stmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        crl_gramParser.import_unit_return i =null;


        RewriteRuleSubtreeStream stream_import_unit=new RewriteRuleSubtreeStream(adaptor,"rule import_unit");
        try {
            // src/main/resources/crl_gram.g:72:2: (i= import_unit -> Import_item[$i.value] )
            // src/main/resources/crl_gram.g:72:4: i= import_unit
            {
            pushFollow(FOLLOW_import_unit_in_import_stmt254);
            i=import_unit();

            state._fsp--;

            stream_import_unit.add(i.getTree());

            // AST REWRITE
            // elements: 
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 72:18: -> Import_item[$i.value]
            {
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(Import_item, (i!=null?i.value:null))
                );

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "import_stmt"


    public static class import_unit_return extends ParserRuleReturnScope {
        public String value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "import_unit"
    // src/main/resources/crl_gram.g:75:1: import_unit returns [String value] : t= ( 'import' | 'package' ) t1= import_item ( ';' )? EOL ;
    public final crl_gramParser.import_unit_return import_unit() throws RecognitionException {
        crl_gramParser.import_unit_return retval = new crl_gramParser.import_unit_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CommonToken t=null;
        CommonToken char_literal6=null;
        CommonToken EOL7=null;
        crl_gramParser.import_item_return t1 =null;


        CommonTree t_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree EOL7_tree=null;

         retval.value =""; 
        try {
            // src/main/resources/crl_gram.g:78:2: (t= ( 'import' | 'package' ) t1= import_item ( ';' )? EOL )
            // src/main/resources/crl_gram.g:78:4: t= ( 'import' | 'package' ) t1= import_item ( ';' )? EOL
            {
            root_0 = (CommonTree)adaptor.nil();


            t=(CommonToken)input.LT(1);

            if ( input.LA(1)==65||input.LA(1)==78 ) {
                input.consume();
                adaptor.addChild(root_0, 
                (CommonTree)adaptor.create(t)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


             retval.value+=(t!=null?t.getText():null)+" "; 

            pushFollow(FOLLOW_import_item_in_import_unit296);
            t1=import_item();

            state._fsp--;

            adaptor.addChild(root_0, t1.getTree());

             retval.value+=(t1!=null?t1.value:null); 

            // src/main/resources/crl_gram.g:78:90: ( ';' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==55) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // src/main/resources/crl_gram.g:78:90: ';'
                    {
                    char_literal6=(CommonToken)match(input,55,FOLLOW_55_in_import_unit300); 
                    char_literal6_tree = 
                    (CommonTree)adaptor.create(char_literal6)
                    ;
                    adaptor.addChild(root_0, char_literal6_tree);


                    }
                    break;

            }


            EOL7=(CommonToken)match(input,EOL,FOLLOW_EOL_in_import_unit303); 
            EOL7_tree = 
            (CommonTree)adaptor.create(EOL7)
            ;
            adaptor.addChild(root_0, EOL7_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

             retval.value+=";"; 
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "import_unit"


    public static class import_item_return extends ParserRuleReturnScope {
        public String value;
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "import_item"
    // src/main/resources/crl_gram.g:81:1: import_item returns [String value] : i1= Identifier ( '.' i2= Identifier )* ( '.' '*' )? ;
    public final crl_gramParser.import_item_return import_item() throws RecognitionException {
        crl_gramParser.import_item_return retval = new crl_gramParser.import_item_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CommonToken i1=null;
        CommonToken i2=null;
        CommonToken char_literal8=null;
        CommonToken char_literal9=null;
        CommonToken char_literal10=null;

        CommonTree i1_tree=null;
        CommonTree i2_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal9_tree=null;
        CommonTree char_literal10_tree=null;

         retval.value =""; 
        try {
            // src/main/resources/crl_gram.g:83:2: (i1= Identifier ( '.' i2= Identifier )* ( '.' '*' )? )
            // src/main/resources/crl_gram.g:83:5: i1= Identifier ( '.' i2= Identifier )* ( '.' '*' )?
            {
            root_0 = (CommonTree)adaptor.nil();


            i1=(CommonToken)match(input,Identifier,FOLLOW_Identifier_in_import_item327); 
            i1_tree = 
            (CommonTree)adaptor.create(i1)
            ;
            adaptor.addChild(root_0, i1_tree);


             retval.value+=(i1!=null?i1.getText():null); 

            // src/main/resources/crl_gram.g:83:41: ( '.' i2= Identifier )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==53) ) {
                    int LA5_1 = input.LA(2);

                    if ( (LA5_1==Identifier) ) {
                        alt5=1;
                    }


                }


                switch (alt5) {
            	case 1 :
            	    // src/main/resources/crl_gram.g:83:42: '.' i2= Identifier
            	    {
            	    char_literal8=(CommonToken)match(input,53,FOLLOW_53_in_import_item332); 
            	    char_literal8_tree = 
            	    (CommonTree)adaptor.create(char_literal8)
            	    ;
            	    adaptor.addChild(root_0, char_literal8_tree);


            	    i2=(CommonToken)match(input,Identifier,FOLLOW_Identifier_in_import_item336); 
            	    i2_tree = 
            	    (CommonTree)adaptor.create(i2)
            	    ;
            	    adaptor.addChild(root_0, i2_tree);


            	     retval.value+="."+(i2!=null?i2.getText():null); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // src/main/resources/crl_gram.g:83:88: ( '.' '*' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==53) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // src/main/resources/crl_gram.g:83:89: '.' '*'
                    {
                    char_literal9=(CommonToken)match(input,53,FOLLOW_53_in_import_item343); 
                    char_literal9_tree = 
                    (CommonTree)adaptor.create(char_literal9)
                    ;
                    adaptor.addChild(root_0, char_literal9_tree);


                    char_literal10=(CommonToken)match(input,51,FOLLOW_51_in_import_item345); 
                    char_literal10_tree = 
                    (CommonTree)adaptor.create(char_literal10)
                    ;
                    adaptor.addChild(root_0, char_literal10_tree);


                     retval.value+=".*"; 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "import_item"


    public static class crl_rule_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "crl_rule"
    // src/main/resources/crl_gram.g:86:1: crl_rule : 'rule #' J_int_literal ( useless )? EOL 'when' EOL ( condition_unit )+ 'then' EOL ( action )+ 'end' ( EOL )? -> ^( J_int_literal ^( Conditions ( condition_unit )+ ) ^( Actions ( action )+ ) ) ;
    public final crl_gramParser.crl_rule_return crl_rule() throws RecognitionException {
        crl_gramParser.crl_rule_return retval = new crl_gramParser.crl_rule_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        CommonToken string_literal11=null;
        CommonToken J_int_literal12=null;
        CommonToken EOL14=null;
        CommonToken string_literal15=null;
        CommonToken EOL16=null;
        CommonToken string_literal18=null;
        CommonToken EOL19=null;
        CommonToken string_literal21=null;
        CommonToken EOL22=null;
        crl_gramParser.useless_return useless13 =null;

        crl_gramParser.condition_unit_return condition_unit17 =null;

        crl_gramParser.action_return action20 =null;


        CommonTree string_literal11_tree=null;
        CommonTree J_int_literal12_tree=null;
        CommonTree EOL14_tree=null;
        CommonTree string_literal15_tree=null;
        CommonTree EOL16_tree=null;
        CommonTree string_literal18_tree=null;
        CommonTree EOL19_tree=null;
        CommonTree string_literal21_tree=null;
        CommonTree EOL22_tree=null;
        RewriteRuleTokenStream stream_J_int_literal=new RewriteRuleTokenStream(adaptor,"token J_int_literal");
        RewriteRuleTokenStream stream_89=new RewriteRuleTokenStream(adaptor,"token 89");
        RewriteRuleTokenStream stream_EOL=new RewriteRuleTokenStream(adaptor,"token EOL");
        RewriteRuleTokenStream stream_81=new RewriteRuleTokenStream(adaptor,"token 81");
        RewriteRuleTokenStream stream_92=new RewriteRuleTokenStream(adaptor,"token 92");
        RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
        RewriteRuleSubtreeStream stream_useless=new RewriteRuleSubtreeStream(adaptor,"rule useless");
        RewriteRuleSubtreeStream stream_action=new RewriteRuleSubtreeStream(adaptor,"rule action");
        RewriteRuleSubtreeStream stream_condition_unit=new RewriteRuleSubtreeStream(adaptor,"rule condition_unit");
        try {
            // src/main/resources/crl_gram.g:87:2: ( 'rule #' J_int_literal ( useless )? EOL 'when' EOL ( condition_unit )+ 'then' EOL ( action )+ 'end' ( EOL )? -> ^( J_int_literal ^( Conditions ( condition_unit )+ ) ^( Actions ( action )+ ) ) )
            // src/main/resources/crl_gram.g:87:4: 'rule #' J_int_literal ( useless )? EOL 'when' EOL ( condition_unit )+ 'then' EOL ( action )+ 'end' ( EOL )?
            {
            string_literal11=(CommonToken)match(input,81,FOLLOW_81_in_crl_rule362);  
            stream_81.add(string_literal11);


            J_int_literal12=(CommonToken)match(input,J_int_literal,FOLLOW_J_int_literal_in_crl_rule364);  
            stream_J_int_literal.add(J_int_literal12);


            // src/main/resources/crl_gram.g:87:27: ( useless )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==67||(LA7_0 >= 75 && LA7_0 <= 76)) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // src/main/resources/crl_gram.g:87:27: useless
                    {
                    pushFollow(FOLLOW_useless_in_crl_rule366);
                    useless13=useless();

                    state._fsp--;

                    stream_useless.add(useless13.getTree());

                    }
                    break;

            }


            EOL14=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule369);  
            stream_EOL.add(EOL14);


            string_literal15=(CommonToken)match(input,92,FOLLOW_92_in_crl_rule373);  
            stream_92.add(string_literal15);


            EOL16=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule375);  
            stream_EOL.add(EOL16);


            // src/main/resources/crl_gram.g:89:3: ( condition_unit )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0 >= 60 && LA8_0 <= 61)||LA8_0==63||LA8_0==66||(LA8_0 >= 71 && LA8_0 <= 74)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // src/main/resources/crl_gram.g:89:3: condition_unit
            	    {
            	    pushFollow(FOLLOW_condition_unit_in_crl_rule380);
            	    condition_unit17=condition_unit();

            	    state._fsp--;

            	    stream_condition_unit.add(condition_unit17.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);


            string_literal18=(CommonToken)match(input,89,FOLLOW_89_in_crl_rule385);  
            stream_89.add(string_literal18);


            EOL19=(CommonToken)match(input,EOL,FOLLOW_EOL_in_crl_rule387);  
            stream_EOL.add(EOL19);


            // src/main/resources/crl_gram.g:91:3: ( action )+
            int cnt9=0;
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==58||LA9_0==64||(LA9_0 >= 68 && LA9_0 <= 70)||(LA9_0 >= 79 && LA9_0 <= 80)||(LA9_0 >= 82 && LA9_0 <= 88)||LA9_0==91) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // src/main/resources/crl_gram.g:91:3: action
            	    {
            	    pushFollow(FOLLOW_action_in_crl_rule391);
            	    action20=action();

            	    state._fsp--;

            	    stream_action.add(action20.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt9 >= 1 ) break loop9;
                        EarlyExitException eee =
                            new EarlyExitException(9, input);
                        throw eee;
                }
                cnt9++;
            } while (true);

